<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WaitingPlayersActivity">

    <Space
        android:id="@+id/waiting_top_space"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/match_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/waiting_top_space"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/match_variant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/match_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/wait_field_match_variant"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/match_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/match_variant"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/wait_field_player_list"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/bottom_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/invite_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="invitePlayers"
            android:text="@string/invite_button_text_invite"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/leave_match_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="leaveMatch"
            android:text="@string/wait_button_text_leave"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/ready_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="userIsReady"
            android:text="@string/wait_button_text_ready"
            android:textAlignment="center"
            android:textSize="15sp"/>

    </LinearLayout>

    <GridView
        android:id="@+id/waiting_players_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_buttons"
        android:layout_below="@id/match_players"
        android:numColumns="2"
        android:verticalSpacing="10dp"/>

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        style="?android:attr/buttonBarButtonStyle"
        android:enabled="false"
        android:onClick="goToMatch"
        android:text="@string/wait_button_text_play"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/cards_no"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/match_description"
        android:adjustViewBounds="true"
        android:contentDescription="@string/no_cards_description"
        android:onClick="changeCardsStatus"
        android:src="@drawable/cards_no"/>

    <ImageView
        android:id="@+id/cards_yes"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/match_description"
        android:adjustViewBounds="true"
        android:contentDescription="@string/yes_cards_description"
        android:onClick="changeCardsStatus"
        android:src="@drawable/cards_yes"
        android:visibility="gone"/>

</RelativeLayout>
