<resources>
    <string name="app_name">Jass@EPFL</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_create">Match Information</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_game">Scores</string>
    <string name="title_activity_list">Nearby matches</string>
    <string name="title_activity_history">Match History</string>
    <string name="title_activity_guide">Help</string>
    <string name="title_activity_rules">Rules of :</string>
    <string name="title_activity_waiting">Waiting for players</string>
    <string name="title_activity_invite">Select players to invite</string>

    <string name="main_empty_pending_list">You are not enrolled in any match</string>
    <string name="main_empty_active_list">You are not in an active game</string>
    <string name="main_empty_finished_list">You have not finished any game yet</string>

    <string name="create_button_text_add_player">Add Player</string>
    <string name="create_field_private_match">Private Match</string>
    <string name="create_field_variant">Game Variant</string>
    <string name="create_field_description">Description</string>
    <string name="create_field_expiration_time">Match valid until</string>
    <string name="create_field_location">Pick the match location</string>
    <string name="create_field_players_list">Send invitations to:</string>
    <string name="create_button_text_create">Create Match</string>
    <string name="create_empty_list">Are you in Info? It seems you have no friends.</string>

    <string name="game_team_name_1">Team 1</string>
    <string name="game_team_name_2">Team 2</string>
    <string name="game_text_score_picker">Enter your score for this round</string>
    <string name="game_text_goal_picker">Enter the new score goal</string>
    <string name="game_text_point_goal">Playing to %s points</string>
    <string name="game_score_table_round">Round</string>
    <string name="game_score_table_points">Points</string>
    <string name="game_score_table_melds">Melds</string>
    <string name="game_default_score">-</string>

    <string name="numpad_text_0">0</string>
    <string name="numpad_text_1">1</string>
    <string name="numpad_text_2">2</string>
    <string name="numpad_text_3">3</string>
    <string name="numpad_text_4">4</string>
    <string name="numpad_text_5">5</string>
    <string name="numpad_text_6">6</string>
    <string name="numpad_text_7">7</string>
    <string name="numpad_text_8">8</string>
    <string name="numpad_text_9">9</string>
    <string name="numpad_text_double_score">x2</string>

    <string name="history_winner">Winner</string>

    <string name="list_empty_list">No matches are available</string>

    <string name="match_list_adapter_players_nb">%1$d/%2$d</string>

    <string name="player_list_adapter_quote">Quote : %d</string>

    <string name="profile_label_quote">Quote</string>
    <string name="profile_label_name">%1$s %2$s</string>
    <string name="profile_label_matches_played">Matches Played</string>
    <string name="profile_label_matches_won">Matches Won</string>
    <string name="profile_label_variants">Variant Most Played</string>
    <!--<string name="profile_label_most_variants">Variant Most Played : %1$s - %2$d times played</string>-->
    <plurals name="profile_label_most_variants">
        <item quantity="one">%1$s - %2$d time played</item>
        <item quantity="other">%1$s - %2$d times played</item>
    </plurals>
    <string name="profile_label_most_played">Most Recurrent Partner</string>
    <!--<string name="profile_label_most_played_with">Most Recurrent Partner : %1$s - %2$d matches played together</string>-->
    <plurals name="profile_label_most_played_with">
        <item quantity="one">%1$s - %2$d match</item>
        <item quantity="other">%1$s - %2$d matches</item>
    </plurals>
    <!--<string name="profile_label_most_won_with">Best Partner : %1$s - %2$d victory together</string>-->
    <string name="profile_label_most_won">Best Partner</string>
    <plurals name="profile_label_most_won_with">
        <item quantity="one">%1$s - %2$d victory</item>
        <item quantity="other">%1$s - %2$d victories</item>
    </plurals>

    <string name="login_welcoming_text">Welcome to Jass@EPFL !</string>
    <string name="login_welcoming_text_suite">To use this app you need to\nlogin with your EPFL account</string>
    <string name="login_button_text">Login</string>

    <string name="notification_player_joined">A new player has joined your game!</string>
    <string name="notification_player_left">A player left your game</string>
    <string name="notification_match_expired">Your match has expired</string>

    <string name="snippet_match_quote">Match Quote:&#160;</string>
    <string name="snippet_player_list">Players:&#160;</string>
    <string name="snippet_game_variant">Variant:&#160;</string>
    <string name="snippet_expiration_date">Valid until:&#160;</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_join_match">Join Match</string>
    <string name="dialog_join_message">Do you want to join this match ?</string>
    <string name="dialog_join_confirmation">Join!</string>
    <string name="dialog_add_player">Invite Player</string>
    <string name="dialog_add_confirmation">Add</string>
    <string name="dialog_remove_player">Remove this player?</string>
    <string name="dialog_select_team">Choose the team for player </string>
    <string name="dialog_team_selection_confirmation">Select</string>
    <string name="dialog_match">Match!</string>
    <string name="dialog_game_end">%s won the match. Congratulations!</string>
    <string name="dialog_leave">Leave</string>

    <string name="date_format_match_display">dd/MM/yyyy HH:mm:ss</string>
    <string name="date_format_match_creation">dd/MM HH:mm</string>

    <string name="request_location_rationale">Jass@EPFL needs to access your location to find matches near you.</string>
    <string name="request_unknown_permission">Unknown Permission</string>

    <string name="wait_field_match_variant">Match variant : %s</string>
    <string name="wait_field_player_list">Match players</string>
    <string name="wait_button_text_play">Play</string>
    <string name="wait_button_text_leave">Leave Match</string>
    <string name="wait_button_text_ready">Ready</string>
    <string name="wait_not_assigned">%s : no team assigned yet</string>
    <string name="wait_assigned">%1$s : Team %2$d</string>

    <string name="toast_invalid_hour">Invalid hour: you cannot go back in time!</string>
    <string name="toast_invalid_date">Invalid date: you cannot go back in time!</string>
    <string name="toast_no_connection">No connection to Firebase.</string>
    <string name="toast_cannot_create_with_no_player">You cannot create a match with no player in it.</string>
    <string name="toast_invite_yourself">You cannot invite yourself</string>
    <string name="toast_cannot_cancel">There is nothing to cancel</string>
    <string name="toast_team_assignment_incorrect">Team assignment incorrect</string>
    <string name="toast_could_not_connect_to_tequila">Could not reach Tequila server. Please try again.</string>
    <string name="toast_could_not_perform_login">Could not perform login. Please try again</string>
    <string name="toast_invalid_score">Invalid score: the max number of points in a round is %d</string>

    <string name="toast_please_enter_description">You must enter a description to create a match.</string>

    <string name="error">Error!</string>
    <string name="error_cannot_join">Can not join match</string>
    <string name="error_match_full">Match is full.</string>
    <string name="error_already_in_match">You are already signed into that match.</string>
    <string name="error_play_services_not_available">Google Play Services is not available.</string>
    <string name="error_auth_failed">Authentication Failed</string>
    <string name="error_retry_message">We weren\'t able to authenticate you. Do you want to retry?</string>

    <string name="icon_description_menu_button">Displays the navigation drawer</string>
    <string name="icon_description_time_picker">Displays a time picker</string>
    <string name="icon_description_date_picker">Displays a date picker</string>
    <string name="icon_description_place_picker">Displays a place picker</string>
    <string name="icon_description_app_icon">The application icon</string>
    <string name="icon_description_meld_spinner">Opens the meld selection menu</string>
    <string name="icon_description_score_update">Opens the score update menu</string>
    <string name="icon_description_score_cancel">Cancels the last score update</string>
    <string name="icon_description_score_picker_cancel">Cancels the last number input</string>
    <string name="icon_description_split_goal">Enable different goals for both teams</string>
    <string name="icon_description_check">Displayed when this player is selected or ready</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_main">Home</string>
    <string name="navigation_drawer_score">Scoreboard</string>
    <string name="navigation_drawer_create">Create Match</string>
    <string name="navigation_drawer_maps">Match Map</string>
    <string name="navigation_drawer_match_list">Match List</string>
    <string name="navigation_drawer_user_profile">Profile</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="navigation_drawer_exit">Exit</string>

    <string name="invite_button_text_invite">Invite</string>
    <string name="invite_welcome_text">Look for players, add them and click on Invite</string>
    <string name="invite_search_player">Search for Player</string>
    <string name="dialog_cards">Cards ?</string>
    <string name="dialog_have_cards">Do you have cards available for this game ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="someone_has_card">Someone has a deck of cards:</string>

    <string name="no_cards_description">Displays no card image</string>
    <string name="yes_cards_description">Displays yes card image </string>

    <string name="loading_leaderboard">Loading Leaderboard…</string>

    <string name="heading_pending_matches">Pending</string>
    <string name="heading_active_matches">Active</string>
    <string name="heading_finished_matches">Finished</string>

    <string name="user_guide">User Guide</string>
    <string name="select_game_variant">Select Game Variant:</string>
    <string name="rules">Rules</string>
    <string name="stats">Stats</string>
    <string name="played_graph">played_graph</string>
    <string name="variants_graph">variants_graph</string>
    <string name="partners_graph">partners_graph</string>
    <string name="won_with_graph">won_with_graph</string>
    <string name="won_graph">won_graph</string>
    <string name="rank_graph">rank_graph</string>

    <string name="no_match_won">No match won yet</string>
    <string name="main_app_icon">Main app icon</string>
</resources>
